@@ -1,3 +1,9 @@
+2002-12-16  Jason Merrill  <jason@redhat.com>
+
+	* Makefile.tpl (all-gcc): Use 'make quickstrap' if there was a
+	previous 'make bootstrap'.
+	* Makefile.in: Regenerate.
+
 2002-12-17  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* configure.in (noconfigdirs) [mmix-*-*]: Disable libgloss and gdb.
